- Reactor: Fixed bug with right column size if only right column is enabled (Trello #1185)
- Reactor: Fixed bug with icon in last card (Trello #1187)
- Disable asynchronous default cron because there's an hourly system cron (Trello #1112)
- xtec-ldap-login: Any existing user whose e-mail is XTEC, will always log in through LDAP if it is activated (Trello #1105)



Changes 16.03.30
---------------------------------------------------------------------------------------
- Reactor: Fixed bug with right column size (Trello #1185)
- Reactor: Fixed bug with menu icons with 2-lines text (Trello #1184)
- Reactor: Fixed bug when resizing cards (Trello #1187)
- XTEC lib: Added suport for extension Email Subscriber in service activation and in URL replace (Trello #1174)
- Theme reactor-serveis-educatius: Fixed menu options set to _blank not opening in new window (Trello #1175)
- Email Subscribers: Changed default group from Public to Portada (Trello #833)


Changes 16.03.14
---------------------------------------------------------------------------------------
- Reactor: Moved hard coded language strings to po file (Trello #963)
- Reactor: Moved equalization of cards to a file previously loaded to increase speed (Trello #963)
- Reactor: Merged files from primaria and serveis-education to the parent theme (Trello #963)
- mu-common: Improved add category image option to let remove it (Trello #1150)
- xtec-ldap-login: Ensure the user metadata is set, as it is required to create blogs in XTECBlocs (Trello #1105)
- bp-moderation: Fixed bug with incorrect viewing link from inappropriate admin comments page (Trello #1160)
- Themes: Revert changes made to avoid 3 columns (Trello #1173)
- Themes: Merged css files (Trello #1173)
- Themes: Deleted unused functions and fonts (Trello #1173)
- Intraweb Importer: Optimize intranet importer loading (Trello #1173)
- Themes: Merge side-menu template (Trello #1173)
- Themes: Create a grid to display a header properly (Trello #1173)